--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="colorAccent">#607D8B</color>
     <color name="ColorPrimaryText">#212121</color>
     <color name="ColorSecondaryText">#757575</color>
-    <color name="icons">#FFFFFF</color>
+    <color name="white">#FFFFFF</color>
+    <color name="red">#F44336</color>
     <color name="divider">#BDBDBD</color>
 </resources>
